--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -53,7 +53,7 @@
                 <h6 class="collapse-header">자재 관리</h6>
                 <a class="collapse-item" th:href="@{/task/part/manage}">재고 관리</a>
                 <a class="collapse-item" th:href="@{/task/part/stock}">재고 현황</a>
-                <a class="collapse-item" th:href="@{/task/part/log}">변동 내역</a>
+                <a class="collapse-item" th:href="@{/task/part/log}">재고 내역</a>
             </div>
         </div>
     </li>
