기능 추가 -> 선택품 선택 페이지 추가 -> 선택품 납품

--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -35,6 +35,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">납품</h6>
                 <a class="collapse-item" th:href="@{/task/outgoing}">고객사 납품</a>
+                <a class="collapse-item" th:href="@{/task/outgoing-select}">고객사 선택품 납품</a>
                 <a class="collapse-item" th:href="@{/task/outgoing-manual}">고객사 수동 납품</a>
             </div>
         </div>
