--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-select.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-select.html
@@ -72,6 +72,27 @@
                     </div>
                 </div>
 
+                <div class="row" id="findInventoryTable">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th class="col-2">보그워너 코드</th>
+                            <th class="col-2">공급업체 코드</th>
+                            <th class="col-1">rop</th>
+                            <th class="col-1">lotMin</th>
+                            <th class="col-1">lotMax</th>
+                            <th class="col-1">전산 재고</th>
+                            <th class="col-1">적입량</th>
+                            <th class="col-1">입고량</th>
+                            <th class="col-1"></th>
+                        </tr>
+                        </thead>
+                        <tbody id="findInventoryTbody">
+                        </tbody>
+                    </table>
+
+                </div>
+
                 <script>
                     let companyCode;
                     let plantCode;
@@ -96,10 +117,11 @@
 
                         if (companyCode != "" && plantCode != "" && date != "" && orderSeq != "" && time != "") {
                             if (await checkOrderHistory(companyCode, plantCode, date, orderSeq)) {
-                                const url = "/api/task/outgoing/inquire-select/"+companyCode+"/"+plantCode;
+                                const url = "/api/task/outgoing/inquire-select/" + companyCode + "/" + plantCode;
                                 let response = await fetch(url);
                                 if (response.status == 200) {
                                     let data = await response.json();
+                                    createInventoryTable(data);
                                     console.log(data);
                                 }
                             } else {
@@ -110,7 +132,7 @@
                                 if (response.status == 200) {
                                     let availableOrder = await response.json();
                                     for (let i = 0; i < availableOrder.length; i++) {
-                                        message += availableOrder[i]+ "차 \n";
+                                        message += availableOrder[i] + "차 \n";
                                     }
                                 }
                                 alert(message);
@@ -118,9 +140,28 @@
                         } else {
                             alert("입력을 확인해주세요")
                         }
-
                     }
 
+                    function createInventoryTable(data) {
+                        let tbody = document.getElementById("findInventoryTbody");
+                        removeChildNode(tbody);
+
+                        for (let i = 0; i < data.length; i++) {
+                            let temp = data[i]
+                            let tr = document.createElement("tr");
+                            tr.innerHTML = `<td>` + temp.partBwCode + `</td>`
+                                + `<td>` + temp.spCode + `</td>`
+                                + `<td>` + temp.rop + `</td>`
+                                + `<td>` + temp.lotMin + `</td>`
+                                + `<td>` + temp.lotMax + `</td>`
+                                + `<td>` + temp.stockQTY + `</td>`
+                                + `<td>` + temp.loadAmount + `</td>`
+                                + `<td>` + `</td>`
+                                + `<td>` + `</td>`
+
+                            tbody.append(tr);
+                        }
+                    }
 
                 </script>
             </div>
